spacing of donate button fixed

--- a/css/index.css
+++ b/css/index.css
@@ -91,7 +91,7 @@ body {
     padding-right: 10px;
 }
 #fundraisers span {
-    top: 20px;
+    top: 30px;
     right: 30px;
 }
 
